--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,24 +1,29 @@
+
 .navigation {
-	background-color: #f2f2f2;
+	background-color: white;
 	text-align: center;
 	position: fixed;
 	top: 0px;
 	left: 0px;
 	right:0px;
 	z-index: 9999;
+	
 }
 
-.navigation li{
+.navigation li {
 	display: inline-block;
 	padding-bottom: 20px;
 	padding-top: 5px;
-	display: inline-block;
 	margin-right: 10px;
+	
 }
 
 .navigation a {
 	text-decoration: none;
 	color: #fff;
+	color: black;
+	font-family: 'Raleway', sans-serif;
+	font-size: 22px;
 }
 
 .navigation ul {
@@ -26,24 +31,34 @@
 }
 
 .navigation a:hover {
-	color: #66ffff;
+	color: #f2f2f2;
 }
 
 .blogpost {
 	width:70%;
 	margin: 0 auto;
 	margin-top: 10px;
-	text-align: center;
+	text-align: justify;
 	padding: 10px;
+	font-family: 'Raleway', sans-serif;
+	font-size: 16px; 
 }
 
 .title {	
-	padding-top: 60px;
+	padding-top: 50px;
 	text-align: center;
+	bottom: 0px;
+	left: 0px;
+	right:0px;
 }
 
 .footer {
+	background-color: #f2f2f2;
 	text-align: center;
+	height: 40px;
+	width: 100%;
+	font-family: 'Raleway', sans-serif;
+	font-size: 18px;
 }
 
 .blogpost h2 {
@@ -51,30 +66,11 @@
 	font-size:1em;
 }
 
-.blogpost h2:hover {
-	transition: 1s;
-	font-size: 5em;
-}
-
 .resize {
 	width: 100%;
 	height: auto;
 }
 
-.videocontainer {
-	position: relative;
-	padding-bottom: 56.25%;
-	padding-top: 25px;
-	height: 0;
-}
-
-.videocontainer iframe{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
 
 @media screen and (max-width: 500px) {
 	.blogpost {
@@ -82,14 +78,19 @@
 	}
 }
 
-
+body {
+	margin: 0px;
+}
  
 
+#footertext {
+	padding-top: 8px;
+}
 
 
-
-
-
+#blogtext {
+	text-align: justify;
+}
 
 
 
