--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,33 +1,42 @@
 
 .navigation {
-	background-color: white;
-	text-align: center;
+	
+	background-color: white;		
+	z-index: 9999;
+	height: 20px;
+	padding-bottom: 35px;
+	padding-top: 35px;
 	position: fixed;
 	top: 0px;
 	left: 0px;
-	right:0px;
-	z-index: 9999;
-	
+	right: 0px;	
 }
 
 .navigation li {
+
 	display: inline-block;
-	padding-bottom: 20px;
-	padding-top: 5px;
+	padding: 0px;
 	margin-right: 10px;
 	
 }
 
 .navigation a {
+
 	text-decoration: none;
-	color: #fff;
 	color: black;
 	font-family: 'Raleway', sans-serif;
 	font-size: 22px;
+	
 }
 
 .navigation ul {
-	height: 30px;
+		
+	z-index: 1;
+	overflow: hidden;
+	margin-bottom: 0px;
+	margin-top: 0px;
+	text-align: center;
+	
 }
 
 .navigation a:hover {
@@ -42,10 +51,11 @@
 	padding: 10px;
 	font-family: 'Raleway', sans-serif;
 	font-size: 16px; 
+	
 }
 
 .title {	
-	padding-top: 50px;
+	padding-top: 0px;
 	text-align: center;
 	bottom: 0px;
 	left: 0px;
@@ -66,13 +76,22 @@
 	font-size:1em;
 }
 
+.blogpost h3 {
+	transition: 1s;
+	font-size:1em;
+	color: white;
+	padding-top: 40px;
+	padding-left: 40px;
+	
+}
+
 .resize {
 	width: 100%;
 	height: auto;
 }
 
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 300px) {
 	.blogpost {
 		width: 100%;
 	}
@@ -85,22 +104,40 @@ body {
 
 #footertext {
 	padding-top: 8px;
+	margin-top: 0px;
 }
 
 
 #blogtext {
-	text-align: justify;
+	text-align: center;
 }
 
 
+#info {
+	padding-top: 0px;
+	text-align: center;
+	bottom: 0px;
+	left: 0px;
+	right:0px;
+}
+
+#contact {
+	background-color: black;
+	width: 100%;
+	height: 200px;
+	padding: 0px;
+}
+
+#contacttext {
+	color: white;
+	padding-top: 0px;
+	padding-left: 40px;
+}
 
 
-
-
-
-
-
-
+.now a{
+	color: #888484;
+}
 
 
 
