--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@
 	z-index: 9999;
 	height: 20px;
 	padding-bottom: 35px;
-	padding-top: 35px;
+	padding-top: 30px;
 	position: fixed;
 	top: 0px;
 	left: 0px;
@@ -24,7 +24,7 @@
 
 	text-decoration: none;
 	color: black;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 22px;
 	
 }
@@ -49,7 +49,7 @@
 	margin-top: 10px;
 	text-align: justify;
 	padding: 10px;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 16px; 
 	
 }
@@ -67,7 +67,7 @@
 	text-align: center;
 	height: 40px;
 	width: 100%;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 18px;
 }
 
@@ -99,6 +99,12 @@
 
 body {
 	margin: 0px;
+}
+
+
+@viewport {
+	zoom: 1,0;
+	width: extend-to-zoom;
 }
  
 
@@ -135,6 +141,7 @@ body {
 	padding-left: 40px;
 }
 
-
-
+a.nav-active {
+    color:#ccc;
+}
 
