--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,6 @@
+body {
+	margin: 0px;
+}
 
 .navigation {
 	
@@ -17,7 +20,6 @@
 	display: inline-block;
 	padding: 0px;
 	margin-right: 10px;
-	
 }
 
 .navigation a {
@@ -26,100 +28,30 @@
 	color: #848484;
 	font-family: 'Raleway', sans-serif;
 	font-size: 22px;
-	
 }
 
-.navigation ul {
-		
+.navigation ul {		
+
 	z-index: 1;
 	overflow: hidden;
 	margin-bottom: 0px;
 	margin-top: 0px;
-	text-align: center;
-	
+	text-align: center;	
 }
 
 .navigation a:hover {
+
 	color: #f4f4f4;
 }
 
-.blogpost {
-	width:70%;
-	margin: 0 auto;
-	margin-top: 10px;
-	text-align: justify;
-	padding: 10px;
-	font-family: 'Raleway', sans-serif;
-	font-size: 16px; 
-	color: #848484
-	
-}
-
 .title {	
+
 	padding-top: 70px;
 	text-align: center;
 	bottom: 0px;
 	left: 0px;
 	right:0px;
 }
-
-.footer {
-	background-color: #f2f2f2;
-	text-align: center;
-	height: 40px;
-	width: 100%;
-	font-family: 'Raleway', sans-serif;
-	font-size: 18px;
-}
-
-.blogpost h2 {
-	transition: 1s;
-	font-size:1em;
-}
-
-.blogpost h3 {
-	transition: 1s;
-	font-size:1em;
-	color: white;
-	padding-top: 40px;
-	padding-left: 40px;
-	
-}
-
-.resize {
-	width: 100%;
-	height: auto;
-}
-
-
-@media screen and (max-width: 300px) {
-	.blogpost {
-		width: 60%;
-	}
-}
-
-body {
-	margin: 0px;
-}
-
-
-@viewport {
-	zoom: 1,0;
-	width: extend-to-zoom;
-}
- 
-
-#footertext {
-	padding-top: 8px;
-	margin-top: 0px;
-}
-
-
-#blogtext {
-	text-align: center;
-	width: 100%;
-}
-
 
 #info {
 	padding-top: 0px;
@@ -129,21 +61,89 @@ body {
 	right:0px;
 }
 
+.blogpost {
+
+	width:70%;
+	margin: 0 auto;
+	margin-top: 10px;
+	text-align: justify;
+	padding: 10px;
+	font-family: 'Raleway', sans-serif;
+	font-size: 16px; 
+	color: #848484	
+}
+
+.blogpost h2 {
+
+	transition: 1s;
+	font-size:1em;
+}
+
+.blogpost h3 {
+
+	transition: 1s;
+	font-size:1em;
+	color: black;
+	padding-top: 40px;
+	padding-left: 40px;	
+}
+
+#blogtext {
+
+	text-align: center;
+	width: 100%;
+}
+
 #contact {
-	background-color: black;
+
+	background-color: #f4f4f4;
 	width: 100%;
 	height: 200px;
 	padding: 0px;
 }
 
 #contacttext {
-	color: white;
+
+	color: black;
 	padding-top: 0px;
 	padding-left: 40px;
 }
 
 #logo {
+
 	height: 40px;
 	width: 60px;
 	padding-left: 40px;
 }
+
+.footer {
+
+	background-color: #848484;
+	text-align: center;
+	height: 40px;
+	width: 100%;
+	font-family: 'Raleway', sans-serif;
+	font-size: 18px;
+}
+
+#footertext {
+	padding-top: 8px;
+	margin-top: 0px;
+}
+
+.resize {
+	width: 100%;
+	height: auto;
+}
+
+@media screen and (max-width: 300px) {
+	.blogpost {
+		width: 60%;
+	}
+}
+
+@viewport {
+	zoom: 1.0;
+	width: extend-to-zoom;
+}
+ 
