--- a/stylesheet.css
+++ b/stylesheet.css
@@ -253,8 +253,8 @@ body {
 	font-family: 'Raleway', sans-serif;
 	font-size: 22px;
     text-align: center;
-    margin-left: 110px;
-    margin-right: 100px;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
@@ -274,8 +274,8 @@ body {
 	font-family: 'Raleway', sans-serif;
 	font-size: 22px;
     text-align: center;
-    margin-left: 110px;
-    margin-right: 100px;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
@@ -321,6 +321,7 @@ body {
 }
 
 #fb {
+    
     height: 50px;
     width: 50px;
 }
@@ -347,6 +348,7 @@ body {
 }
 
 #blogtitle {  
+    
     text-decoration: none;
 	color: #848484;
 	font-family: 'Raleway', sans-serif;
@@ -356,4 +358,5 @@ body {
     background-color: white;
     margin: 0px;
     padding-top: 10px;
+    
 }
