--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,7 +101,8 @@ body {
     align-items: center;
 	width: 100%;
     max-width: 1000px;
-    margin-left: 150px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #contact {
@@ -232,8 +233,8 @@ body {
 	font-family: 'Raleway', sans-serif;
 	font-size: 22px;
     text-align: center;
-    margin-left: 110px;
-    margin-right: 100px;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
@@ -308,10 +309,10 @@ body {
     /*display: block;*/
     justify-content: center;
     align-items: center;
-    margin-left: 225px;
-    margin-right: 100px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+   padding-bottom: 20px;
+    padding-top: 20px;
     
 }
 
